--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "director": "",
-    "cool-ascii-faces": "~1.3.x"
+    "director": ""
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "v16.13.2",
+    "npm": "8.1.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/ASchoe311/RicksDoorQueue"
   },
   "keywords": [
     "node",
