--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Queue manager",
   "main": "index.js",
   "scripts": {
-    "start": "npm start"
+    "start": "node index.js"
   },
   "engines": {
     "node": "12.21.0",
