--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/director": "^1.2.1",
     "@types/node-cron": "^3.0.1",
     "director": "^1.2.8",
+    "eta": "^1.12.3",
     "node-cron": "^3.0.0"
   }
 }
